--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -66,7 +66,7 @@ nav a {
   display: inline-block;
   padding: 10px 20px;
   margin: 0 5px;
-  background-color: #0a68dc;
+  background-color: #044d96;
   border-radius: 5px;
   color: white;
   text-decoration: none;
@@ -446,3 +446,5 @@ footer .socialmedia a img {
 footer .socialmedia a img:hover {
   transform: scale(1.1);
 }
+
+/* ================= HOME PAGE ================= */
